@@ -4,6 +4,7 @@
 	  (ComputeLength, Pack, Format1) new methods.
 	* buffer.h: add Put(char) method.
 	* xmap.h: add add(const char*) method.
+	* Torrent.cc, Torrent.h: add LTEP and FAST Extensions.
 
 2012-07-26  Alexander V. Lukyanov <lav@yars.free.net>
 
